style: fix sonar issues